zero-cost-templating/tests/ui/compile_fail_expand/wrong_type.rs
../compile_fail_no_expand/wrong_type.rs